# mahjong-calc

./: .editorconfig  .eslintignore  .eslintrc.json  .eslintrc.yml  .stylelintrc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.commonjs.json  tsconfig.json  tsconfig.node.json  tsconfig.webpack.json  vite.config.ts  webpack.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
.husky/: pre-commit
doc/: how-to-use.md
locales/: en.yml  ja.yml  ko.yml  zh-CN.yml
plugins/: commit-hash.ts  yaml.ts
public/: app.webmanifest
resources/: app.webmanifest
src/: index.html  index.tsx  style.css  svg.d.ts
src/components/: About.tsx  App.tsx  AppContent.tsx  AppContentLoading.tsx  AppearanceSettings.tsx  Calculator.tsx  DiscardItem.tsx  Footer.tsx  FuDetail.tsx  HandOptions.tsx  Header.tsx  HoraItem.tsx  HoraItemSummary.tsx  InputGlance.tsx  KeyboardHelp.tsx  LimitBadge.tsx  PointDiff.tsx  Result.tsx  ResultGlance.tsx  RuleSettings.tsx  Score.tsx  ScorePlusList.tsx  ScoringTable.tsx  Settings.tsx  Shanten.tsx  TableSettings.tsx  Tempai.tsx  YakuList.tsx  app-config.tsx  app.tsx  footer.tsx  fu-detail.tsx  hand-config.tsx  header.tsx  hora-item.tsx  notify-update.tsx  result.tsx  rule-config.tsx  table-config.tsx
src/contexts/: store.tsx
src/lib/: bem.ts  (+16 more)
wasm/decomposer/: Cargo.toml
wasm/decomposer/src/: counts.rs  data.rs  decomposer.rs  lib.rs  shanten.rs
wasm/decomposer/src/decomposer/: numbers.rs
(+58 files in other folders)
