[package]
name = "decomposer"
version = "0.1.0"
authors = ["livewing.net <dev@livewing.net>"]
edition = "2021"
description = "Mahjong hand decomposer"
repository = "https://github.com/livewing/mahjong-calc"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.10.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }

[profile.release]
opt-level = "s"
