[package]
name = "decomposer"
version = "0.1.0"
authors = ["livewing.net <dev@livewing.net>"]
edition = "2021"
description = "Mahjong hand decomposer"
repository = "https://github.com/livewing/mahjong-calc"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }

[profile.release]
opt-level = "s"
